# schedule_bot

./: .gitignore  Dockerfile  README.md  alembic.ini  bot.py  db.py  docker-compose.yaml  gui.py  info.py  logger.conf  manager.py  parse.py  pyproject.toml  requirements.txt  schedule.py  schedule_downloader.py  setup.cfg  times.py  updater.py  weather.py
config/prometheus/: prometheus.yaml
schedule_bot/: __init__.py  __main__.py  bot.py  config.toml  db.py  gui.py  logger.conf  manager.py  parse.py  schedule.py  schedule_downloader.py  times.py  updater.py  weather.py
schedule_bot/bot/: __init__.py  bot.py  keyboard.py  mailing.py
schedule_bot/db/: db.py
schedule_bot/gui/: gui.py
schedule_bot/manager/: __init__.py  manager.py  user.py
schedule_bot/metrics/: __init__.py
schedule_bot/migrations/: env.py  script.py.mako
schedule_bot/migrations/versions/: 0f28af740d95_initial.py  dae6df72a35e_change_telegram_id_from_int_to_big_int.py
schedule_bot/updater/: __init__.py  arguments.py  downloader.py  parse.py  regexp.py  schedule_downloader.py  storage.py  update.py
schedule_bot/utils/: configure.py  schedule.py  times.py  weather.py
tests/: test_parser.py  test_schedule.py
tests/test_utils/: test_times.py  test_weather.py
